--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,11 +14,11 @@ body {
 }
 
 a {
-  color: #ffb03b;
+  color: #9c31e4;
 }
 
 a:hover {
-  color: #ffc56e;
+  color: #9c31e4;
   text-decoration: none;
 }
 
@@ -50,7 +50,7 @@ h6 {
   width: 40px;
   height: 40px;
   border-radius: 50px;
-  background: #ffb03b;
+  background: #9c31e4;
   color: #fff;
   transition: all 0.4s;
 }
@@ -81,7 +81,7 @@ h6 {
 }
 
 #topbar i {
-  color: #ffb03b;
+  color: #9c31e4;
 }
 
 #topbar i + i {
@@ -167,12 +167,12 @@ h6 {
 .nav-menu a:hover,
 .nav-menu .active > a,
 .nav-menu li:hover > a {
-  color: #ffb03b;
+  color: #bd5bff;
   text-decoration: none;
 }
 
 .nav-menu .book-a-table a {
-  background: #ffb03b;
+  background: #9c31e4;
   color: #fff;
   border-radius: 50px;
   margin: 0 0 0 20px;
@@ -225,7 +225,7 @@ h6 {
 .nav-menu .drop-down ul a:hover,
 .nav-menu .drop-down ul .active > a,
 .nav-menu .drop-down ul li:hover > a {
-  color: #ffb03b;
+  color: #9c31e4;
 }
 
 .nav-menu .drop-down > a:after {
@@ -322,12 +322,12 @@ h6 {
 .mobile-nav a:hover,
 .mobile-nav .active > a,
 .mobile-nav li:hover > a {
-  color: #ffb03b;
+  color: #9c31e4;
   text-decoration: none;
 }
 
 .mobile-nav .book-a-table a {
-  background: #ffb03b;
+  background: #9c31e4;
   color: #fff;
   border-radius: 50px;
   margin: 0 0 0 20px;
@@ -448,7 +448,7 @@ h6 {
 }
 
 #hero h2 span {
-  color: #ffb03b;
+  color: #ad45f3;
 }
 
 #hero p {
@@ -530,12 +530,12 @@ h6 {
   -webkit-animation-delay: 0.8s;
   animation-delay: 0.8s;
   color: #fff;
-  border: 2px solid #ffb03b;
+  border: 2px solid #9c31e4;
 }
 
 #hero .btn-menu:hover,
 #hero .btn-book:hover {
-  background: #ffb03b;
+  background: #9c31e4;
   color: #fff;
 }
 
@@ -579,7 +579,7 @@ section {
 }
 
 .section-title h2 span {
-  color: #ffb03b;
+  color: #9c31e4;
 }
 
 .section-title p {
@@ -697,7 +697,7 @@ section {
 
 .about .content ul i {
   font-size: 20px;
-  color: #ffb03b;
+  color: #9c31e4;
   position: absolute;
   left: 0;
   top: 2px;
@@ -708,17 +708,15 @@ section {
 }
 
 .about .video-box {
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center center;
-  min-height: 400px;
-  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .about .play-btn {
   width: 94px;
   height: 94px;
-  background: radial-gradient(#ffb03b 50%, rgba(255, 176, 59, 0.4) 52%);
+  background: radial-gradient(#9c31e4 50%, rgba(255, 176, 59, 0.4) 52%);
   border-radius: 50%;
   display: block;
   position: absolute;
@@ -766,7 +764,7 @@ section {
 }
 
 .about .play-btn:hover::after {
-  border-left: 15px solid #ffb03b;
+  border-left: 15px solid #9c31e4;
   transform: scale(20);
 }
 
@@ -864,7 +862,7 @@ section #skills .skills {
 }
 
 .skills .box:hover {
-  background: #ffb03b;
+  background: #9c31e4;
   padding: 30px 30px 70px 30px;
   box-shadow: 10px 15px 30px rgba(0, 0, 0, 0.18);
 }
@@ -920,7 +918,7 @@ section #skills .skills {
 }
 
 .features .icon-box:hover a {
-  color: #ffb03b;
+  color: #9c31e4;
 }
 
 /*--------------------------------------------------------------
@@ -945,14 +943,14 @@ section #skills .skills {
   margin: 0 3px 10px 3px;
   transition: all ease-in-out 0.3s;
   background: #fff;
-  border: 2px solid #ffb03b;
+  border: 2px solid #9c31e4;
   border-radius: 50px;
 }
 
 .menu #menu-flters li:hover,
 .menu #menu-flters li.filter-active {
   color: #fff;
-  background: #ffb03b;
+  background: #9c31e4;
 }
 
 .menu #menu-flters li:last-child {
@@ -1027,12 +1025,12 @@ section #skills .skills {
 }
 
 .experience .nav-link:hover {
-  color: #ffb03b;
+  color: #9c31e4;
 }
 
 .experience .nav-link.active {
-  color: #ffb03b;
-  border-color: #ffb03b;
+  color: #9c31e4;
+  border-color: #9c31e4;
 }
 
 .experience .tab-pane.active {
@@ -1062,7 +1060,7 @@ section #skills .skills {
   }
   .experience .nav-link.active {
     color: #fff;
-    background: #ffb03b;
+    background: #9c31e4;
   }
 }
 
@@ -1111,7 +1109,7 @@ section #skills .skills {
 .events .event-item h3 {
   font-weight: 600;
   font-size: 26px;
-  color: #ffb03b;
+  color: #9c31e4;
 }
 
 .events .event-item .price {
@@ -1122,7 +1120,7 @@ section #skills .skills {
 }
 
 .events .event-item .price span {
-  border-bottom: 2px solid #ffb03b;
+  border-bottom: 2px solid #9c31e4;
 }
 
 .events .event-item ul {
@@ -1137,7 +1135,7 @@ section #skills .skills {
 .events .event-item ul i {
   font-size: 20px;
   padding-right: 4px;
-  color: #ffb03b;
+  color: #9c31e4;
 }
 
 .events .event-item p:last-child {
@@ -1160,7 +1158,7 @@ section #skills .skills {
 }
 
 .events .owl-dot.active {
-  background-color: #ffb03b !important;
+  background-color: #9c31e4 !important;
 }
 
 @media (min-width: 992px) {
@@ -1249,7 +1247,7 @@ section #skills .skills {
 }
 
 .book-a-table .php-email-form button[type="submit"] {
-  background: #ffb03b;
+  background: #9c31e4;
   border: 0;
   padding: 10px 24px;
   color: #fff;
@@ -1307,7 +1305,7 @@ section #skills .skills {
   font-weight: 600;
   text-transform: uppercase;
   font-family: "Poppins", sans-serif;
-  color: #ffb03b;
+  color: #9c31e4;
   margin-bottom: 10px;
 }
 
@@ -1342,8 +1340,8 @@ section #skills .skills {
   transform: rotate(45deg);
   left: -9px;
   top: 0;
-  background: #ffb03b;
-  border: 2px solid #ffb03b;
+  background: #9c31e4;
+  border: 2px solid #9c31e4;
 }
 
 /*--------------------------------------------------------------
@@ -1432,7 +1430,7 @@ section #skills .skills {
 }
 
 .chefs .member .social a:hover {
-  color: #ffb03b;
+  color: #9c31e4;
 }
 
 .chefs .member .social i {
@@ -1505,7 +1503,7 @@ section #skills .skills {
 }
 
 .testimonials .testimonial-item .stars {
-  color: #ffb03b;
+  color: #9c31e4;
   margin-bottom: 10px;
 }
 
@@ -1550,7 +1548,7 @@ section #skills .skills {
 }
 
 .testimonials .owl-dot.active {
-  background-color: #ffb03b !important;
+  background-color: #9c31e4 !important;
 }
 
 @media (min-width: 1024px) {
@@ -1579,7 +1577,7 @@ section #skills .skills {
 
 .contact .info i {
   font-size: 20px;
-  color: #ffb03b;
+  color: #9c31e4;
   float: left;
   width: 44px;
   height: 44px;
@@ -1608,7 +1606,7 @@ section #skills .skills {
 }
 
 .contact .info:hover i {
-  background: #ffb03b;
+  background: #9c31e4;
   color: #fff;
 }
 
@@ -1685,7 +1683,7 @@ section #skills .skills {
 }
 
 .contact .php-email-form button[type="submit"] {
-  background: #ffb03b;
+  background: #9c31e4;
   border: 0;
   padding: 10px 24px;
   color: #fff;
@@ -1729,7 +1727,7 @@ section #skills .skills {
 #footer h3 {
   font-size: 36px;
   font-weight: 700;
-  color: #ffb03b;
+  color: #9c31e4;
   position: relative;
   padding: 0;
   margin: 0 0 15px 0;
@@ -1762,7 +1760,7 @@ section #skills .skills {
 }
 
 #footer .social-links a:hover {
-  background: #ffb03b;
+  background: #9c31e4;
 }
 
 #footer .copyright {
