--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1614,18 +1614,18 @@ section #skills .skills {
   color: #fff;
 }
 
-.contact .php-email-form {
+.contact .php-email-formm {
   width: 100%;
   box-shadow: 0 0 24px 0 rgba(0, 0, 0, 0.12);
   padding: 30px;
   background: #fff;
 }
 
-.contact .php-email-form .form-group {
+.contact .php-email-formm .form-group {
   padding-bottom: 8px;
 }
 
-.contact .php-email-form .validate {
+.contact .php-email-formm .validate {
   display: none;
   color: red;
   margin: 0 0 15px 0;
@@ -1633,7 +1633,7 @@ section #skills .skills {
   font-size: 13px;
 }
 
-.contact .php-email-form .error-message {
+.contact .php-email-formm .error-message {
   display: none;
   color: #fff;
   background: #ed3c0d;
@@ -1642,7 +1642,7 @@ section #skills .skills {
   font-weight: 600;
 }
 
-.contact .php-email-form .sent-message {
+.contact .php-email-formm .sent-message {
   display: none;
   color: #fff;
   background: #18d26e;
@@ -1651,14 +1651,14 @@ section #skills .skills {
   font-weight: 600;
 }
 
-.contact .php-email-form .loading {
+.contact .php-email-formm .loading {
   display: none;
   background: #fff;
   text-align: center;
   padding: 15px;
 }
 
-.contact .php-email-form .loading:before {
+.contact .php-email-formm .loading:before {
   content: "";
   display: inline-block;
   border-radius: 50%;
@@ -1671,22 +1671,22 @@ section #skills .skills {
   animation: animate-loading 1s linear infinite;
 }
 
-.contact .php-email-form input,
-.contact .php-email-form textarea {
+.contact .php-email-formm input,
+.contact .php-email-formm textarea {
   border-radius: 0;
   box-shadow: none;
   font-size: 14px;
 }
 
-.contact .php-email-form input {
+.contact .php-email-formm input {
   height: 44px;
 }
 
-.contact .php-email-form textarea {
+.contact .php-email-formm textarea {
   padding: 10px 12px;
 }
 
-.contact .php-email-form button[type="submit"] {
+.contact .php-email-formm button[type="submit"] {
   background: #9c31e4;
   border: 0;
   padding: 10px 24px;
@@ -1695,7 +1695,7 @@ section #skills .skills {
   border-radius: 50px;
 }
 
-.contact .php-email-form button[type="submit"]:hover {
+.contact .php-email-formm button[type="submit"]:hover {
   background: #ffa012;
 }
 
