--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,8 +57,8 @@ h6 {
 }
 
 .back-to-top i:hover {
-  background: #ffa012;
-  color: #fff;
+  background: #ecceff;
+  color: #9c31e4;
 }
 
 /*--------------------------------------------------------------
@@ -98,7 +98,7 @@ h6 {
   z-index: 997;
   transition: all 0.5s;
   padding: 10px 0;
-  background: rgba(26, 24, 22, 0.85);
+  background: rgba(24, 22, 26, 0.85);
 }
 
 #header.header-transparent {
@@ -107,7 +107,7 @@ h6 {
 
 #header.header-scrolled {
   top: 0;
-  background: rgba(26, 24, 22, 0.85);
+  background: rgba(24, 22, 26, 0.85);
 }
 
 #header .logo h1 {
@@ -133,7 +133,7 @@ h6 {
 @media (max-width: 992px) {
   #header {
     top: 0;
-    background: rgba(26, 24, 22, 0.85);
+    background: rgba(24, 22, 26, 0.85);
   }
 }
 
@@ -579,7 +579,7 @@ section {
   margin: 15px 0 0 0;
   font-size: 32px;
   font-weight: 700;
-  color: #5f5950;
+  color: #57505f;
 }
 
 .section-title h2 span {
@@ -1023,7 +1023,7 @@ section #skills .skills {
   transition: 0.3s;
   color: #433f39;
   border-radius: 0;
-  border-right: 2px solid #e8e7e4;
+  border-right: 2px solid #e7e4e8;
   font-weight: 600;
   font-size: 15px;
 }
@@ -1430,7 +1430,7 @@ section #skills .skills {
 
 .chefs .member .social a {
   transition: color 0.3s;
-  color: #7a7368;
+  color: #70687a;
 }
 
 .chefs .member .social a:hover {
@@ -1696,7 +1696,7 @@ section #skills .skills {
 }
 
 .contact .php-email-formm button[type="submit"]:hover {
-  background: #ffa012;
+  background: #18d26e;
 }
 
 @-webkit-keyframes animate-loading {
@@ -1721,7 +1721,7 @@ section #skills .skills {
 # Footer
 --------------------------------------------------------------*/
 #footer {
-  background: #35322d;
+  background: #312d35;
   color: #fff;
   font-size: 14px;
   text-align: center;
@@ -1751,7 +1751,7 @@ section #skills .skills {
 #footer .social-links a {
   font-size: 18px;
   display: inline-block;
-  background: #46423b;
+  background: #3f3b46;
   color: #fff;
   line-height: 1;
   padding: 8px 0;
