--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1439,7 +1439,7 @@ section #skills .skills {
 --------------------------------------------------------------*/
 .testimonials {
   padding: 80px 0;
-  background: url("../img/testimonials-bg.jpg") no-repeat;
+  background: url("../img/ArmyBomb.jpg") no-repeat;
   background-position: center center;
   background-size: cover;
   position: relative;
